@@ -1,5 +1,5 @@
 name    = Config-Model-OpenSsh
-version = 1.215
+version = 1.216
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
@@ -8,6 +8,7 @@ copyright_year = 2011
 [Prereqs / RuntimeRequires]
 Config::Model    = 1.236
 Log::Log4perl    = 1.11 
+Any::Moose       = 0
 
 [Prereqs / RuntimeRecommends]
 Config::Model::CursesUI = 0 ; Curses interface
