@@ -1,6 +1,6 @@
 package Config::Model::Backend::OpenSsh ;
 
-use Moose ;
+use Any::Moose ;
 extends "Config::Model::Backend::Any" ;
 
 has 'current_node'  => ( 
@@ -169,6 +169,8 @@ sub write_node_content {
 
     return $result.$match ;
 }
+
+no Any::Moose;
 
 1;
 
