@@ -1,6 +1,6 @@
 package Config::Model::Backend::OpenSsh::Ssh ;
 
-use Moose ;
+use Any::Moose ;
 extends "Config::Model::Backend::OpenSsh" ;
 
 use Carp ;
@@ -191,6 +191,8 @@ sub write_forward {
     return $self->write_line($forward_elt->element_name,$line,$forward_elt->annotation) ;
 }
 1;
+
+no Any::Moose;
 
 __END__
 
